[package]
name = "project_ac"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.0"
tokio = { version = "1", features = ["full"] }
image = "0.23"
gtk = "0.9"
serde = "1.0"
serde_json = "1.0"